workhistory section added

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,1 +1,20 @@
+<div class="skillMainCntainer">
+    <div class="HeadSection">
+        <h2 id="skillHeading">My Skills</h2>
+        <p id="subHeading">Writing Code using languages c#,javaScript,Java,HTML,CSS,Angular........</p>
+    </div>
+    <div class="cardContainer">
+            <div class="card">
+                
+            </div>
+            <div class="card">
 
+            </div>
+            <div class="card">
+
+            </div>
+            <div class="card">
+
+            </div>
+    </div>
+</div>
