--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
             <a class="nav-link active" aria-current="page" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Work History</a>
+            <a class="nav-link" href="workhistory">Work History</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="skills">Skills</a>
